@@ -2,6 +2,7 @@ Release History
 
 v1.0.0903.0408
 - added ability to specify inline anonymous templates in JBST using declarative <jbst:control></jbst:control> syntax
+- cleaned up calling template parts in the context of "this"
 
 v1.0.0903.0309
 - added unparsed block syntax <%# %> for inserting data that contains markup
